--- a/services/sagemaker/generator.yaml
+++ b/services/sagemaker/generator.yaml
@@ -1,4 +1,12 @@
+operations:
+  StopTrainingJob:
+    operation_type: Delete
+    resource_name: TrainingJob
 resources:
+  TrainingJob:
+    exceptions:
+      codes:
+        404: ValidationException
   Model:
     exceptions:
       codes:
@@ -25,7 +33,6 @@ ignore:
       - PresignedDomainUrl
       - PresignedNotebookInstanceUrl
       - ProcessingJob
-      - TrainingJob
       - TransformJob
       - TrialComponent
       - Trial
